# org.wxwidgets-wxwidgets

./: .build.sh  .gitignore  .travis.yml
installer/ivy/: CMakeLists.txt  pom.xml
installer/ivy/wxwidgets/: CMakeLists.txt  ivy.xml
tests/: mingw_dll_dependencies.py
wrapper/: __README__.txt  i686-w64-mingw32-g++  wrapper  x86_64-w64-mingw32-g++
